# libcimbar

./: cimbar_scanner_project_summary.md
src/exe/cimbar_decoder_wasm/: CMakeLists.txt  cimbar_decoder_wasm.cpp
web/: README.md  build_instructions.md  cimbar_decoder_wasm.js  cimbar_scanner.html  decoder.html  decoder.js  start_server.py  sw.js
